# rds

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/default/: .frag.glsl  .vert.glsl
assets/vehicle/: GL_Shelby_Chassis.fbx  GL_Shelby_ChassisOnly.fbx  GL_Shelby_ChassisOnlyY.fbx  GL_Shelby_ChassisOnlyZ.fbx  GL_Shelby_Wheel.fbx  GL_Shelby_WheelOnly.fbx  shelby.fbx
src/: CMakeLists.txt
src/rds/: .main.cpp.swp  CMakeLists.txt  ai_main.cpp  main.cpp  main.cpp.save
src/rds/private/ai/: boltzmannPolicy.cpp  learner.cpp  util.cpp
src/rds/private/ai/fa/: linearFA.cpp
src/rds/private/ai/policy/: boltzmannPolicy.cpp
src/rds/private/fbx/: importer.cpp
src/rds/private/physics/: rigid-body.cpp  vehicle-wheel.cpp  vehicle.cpp
src/rds/public/: input_manager.h
src/rds/public/ai/: boltzmannPolicy.h  learner.h  util.h
src/rds/public/ai/fa/: fa.h  linearFA.h
src/rds/public/ai/policy/: boltzmannPolicy.h  policy.h
src/rds/public/fbx/: importer.h
src/rds/public/physics/: rigid-body.h  vehicle-wheel.h  vehicle.h
src/rds/public/primitives/: box.h  cylinder.h  plane.h
src/rds/public/renderer/: mesh.h  render_batch.h
src/sgl/: CMakeLists.txt
src/sgl/public/: coremin.h
src/sgl/public/containers/: array.h  binary_tree.h  pair.h  string.h
src/sgl/public/generic/: generic_platform_math.h
src/sgl/public/gldrv/unix/: gl_unix.h
src/sgl/public/hal/: platform_atomics.h
src/sgl/public/math/: mat4_simd.h  math.h  math_fwd.h  quat.h  quat_simd.h  vec2.h  vec3_simd.h
src/sgl/public/templates/: const_ref.h  is_integral.h
